[package]
name = "raclette"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "pipe"] }
nix = "0.18"
term = "0.6"

[[test]]
name = "main"
harness = false
