[package]
name = "raclette"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "pipe"] }
mio-signals = "0.1.2"
nix = "0.18"
num_cpus = "1.0"
pico-args = "0.3"
term = "0.6"

